force-app/main/default/objects/Employee__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <formula>Salary__c *0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>