force-app/main/default/objects/Employee__c/fields/Payroll_Company__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Company__c</fullName>
    <label>Payroll Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>