force-app/main/default/objects/Employee__c/recordTypes/Permanent.recordType-meta.xml
<RecordType>
    <fullName>Permanent</fullName>
    <active>true</active>
    <label>Permanent</label>
</RecordType>