force-app/main/default/objects/Employee__c/validationRules/Salry_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salry_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name == &quot;Permanent&quot;, Salary__c &lt;10000)</errorConditionFormula>
    <errorMessage>Permanent employees should have the salary &gt;10000</errorMessage>
</ValidationRule>